Allow view-source to handle arbitrary content (as text-plain, in the worst case).  Bug 77337, r=jst, sr=darin